--- a/01_Introduction/03_Software_Primer.Rmd
+++ b/01_Introduction/03_Software_Primer.Rmd
@@ -606,6 +606,7 @@ compare_designs(simple_design, redesigned_simple_design)
 ```{r, eval = FALSE}
 compare_diagnoses(simple_design, redesigned_simple_design)
 ```
-```{r, echo = FALSE}
+```{r, echo = FALSE, eval = FALSE}
+# temporarily disabled until we are are on CRAN 
 compare_diagnoses(simple_design, redesigned_simple_design, sims = sims)$diagnosands_df %>% kable
 ```
